--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkmv config.example.php config.phpout@v3
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -32,4 +32,6 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Запуск спама
       run: |
+        cd fast-mail-bomber
+        mv config.example.php config.php
         php index.php start-bombing 76elvina@awgarstone.com
