--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,4 @@ jobs:
       run: |
         cd fast-mail-bomber
         mv config.example.php config.php
-        php index.php start-bombing 76elvina@awgarstone.com
+        php index.php start-bombing 6i2aqcxtaj@rfcdrive.com
